[project]
name = "ore-research-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.9.0.post1",
    "langchain-community>=0.3.8",
    "langchain>=0.3.8",
    "openai>=1.55.0",
    "pdfminer-six>=20240706",
    "pylance>=0.19.2",
    "pypdf>=5.1.0",
    "pypdf2>=3.0.1",
    "ruff>=0.8.0",
    "tiktoken>=0.8.0",
    "langchain-openai>=0.2.9",
    "gtts>=2.5.4",
]
